tests/ui/hrtb/hrtb-lifetime-extend-unsound.stderr
error: lifetime may not live long enough
  --> $DIR/hrtb-lifetime-extend-unsound.rs:38:5
   |
LL | fn extend_lifetime<'a, 'b, T: ?Sized>(x: &'a T) -> &'b T {
   |                    --  -- lifetime `'b` defined here
   |                    |
   |                    lifetime `'a` defined here
LL |     need_hrtb_subtrait::<MyStruct, T>(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 1 previous error

